baml_language/crates/baml_tests/snapshots/compiles/json_to_from_string_three_level/baml_tests__compiles__json_to_from_string_three_level__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 16573
---
=== PPIR ===
function user.level1(s: string) -> T  [expr] {
  {  } baml.json.from_string(s)
}
function user.level2(s: string) -> T  [expr] {
  {  } level1(s)
}
function user.level3(s: string) -> T  [expr] {
  {  } level2(s)
}
