baml_language/crates/baml_tests/snapshots/compiles/json_to_from_string_three_level/baml_tests__compiles__json_to_from_string_three_level__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.level1<T>(s: string) -> T throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  { : T
    baml.json.from_string<T>(s) : T
  }
}
function user.level2<T>(s: string) -> T throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  { : T
    level1<T>(s) : T
  }
}
function user.level3<T>(s: string) -> T throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  { : T
    level2<T>(s) : T
  }
}
