baml_language/crates/baml_tests/snapshots/compiles/json_to_from_string_three_level/baml_tests__compiles__json_to_from_string_three_level__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function boundary.LocalId.capture(self: boundary.LocalId, inputs: bool | null, output: bool | null, error: bool | null) -> boundary.LocalId {
}

function boundary.id() -> boundary.LocalId {
}

function boundary.id.current() -> string {
}

function reflect.call_any(f: baml.AnyFunction<Returns = R, Throws = E>, args: unknown[], opts: map<string, unknown>) -> R {
}

function reflect.signature(f: baml.AnyFunction<Returns = unknown, Throws = unknown>) -> reflect.Signature {
}

function user.level1(s: string) -> T {
    load_type #0
    load_var s
    call baml.json.from_string
    return
}

function user.level2(s: string) -> T {
    load_type #0
    load_var s
    call user.level1
    return
}

function user.level3(s: string) -> T {
    load_type #0
    load_var s
    call user.level2
    return
}
